--- a/index_ht.html
+++ b/index_ht.html
@@ -11,6 +11,9 @@
 
 <body>
 
+<header class="header">header</header>
+<main class="main">main</main>
+<footer class="footer">style</footer>
 
 </body>
 </html>
