--- a/index_ht.html
+++ b/index_ht.html
@@ -11,7 +11,17 @@
 
 <body>
 
-<header class="header">header</header>
+<header class="header">
+
+  <div class="conteiner">logo</div>
+  <div class="col-md-6">menu</div>
+  <div class="col-md-3">search</div>
+
+</header>
+
+
+
+
 <main class="main">main</main>
 <footer class="footer">style</footer>
 
