add in html div 'container'. add div 'row' with 3 col-place for logo,menu,search

--- a/index_ht.html
+++ b/index_ht.html
@@ -5,7 +5,7 @@
     <title>ht 9</title>
 
  <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="index_ht.css">
+<link rel="stylesheet" href="style_ht.css">
 
 </head>
 
@@ -13,11 +13,17 @@
 
 <header class="header">
 
-  <div class="conteiner">logo</div>
-  <div class="col-md-6">menu</div>
-  <div class="col-md-3">search</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">logo</div>
+    <div class="col-md-6">menu</div>
+    <div class="col-md-3">search</div>
+  </div>
+</div>
 
 </header>
+
+
 
 
 
