--- a/index_ht.html
+++ b/index_ht.html
@@ -14,11 +14,31 @@
 <header class="header">
 
 <div class="container">
+
   <div class="row">
-    <div class="col-md-3">logo</div>
+    <div class="col-md-3">
+      <a href=""> 
+        <img src="img/logo.png" alt "">
+      </a>
+    </div>
+
     <div class="col-md-6">menu</div>
-    <div class="col-md-3">search</div>
-  </div>
+
+
+
+    <div class="col-md-3"> search
+      <!-- <div class="search">
+       <div class="form">
+        <input type="text" placeholder="search" name="search">
+        <div class="glass"> <input type="image" src="img/glass.png"></div>
+       </div>
+       <div class="basket"><img src="img/basket.png" alt=""></div>
+       </div> -->
+    </div>
+ 
+</div>
+
+  
 </div>
 
 </header>
