--- a/index_ht.html
+++ b/index_ht.html
@@ -22,7 +22,15 @@
       </a>
     </div>
 
-    <div class="col-md-6">menu</div>
+    <div class="col-md-6">
+      <ul class="menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Payment</a></li>
+        <li><a href="">Shipping</a></li>
+      </ul>
+
+    </div>
 
 
 
