--- a/index_ht.html
+++ b/index_ht.html
@@ -24,24 +24,73 @@
 
     <div class="col-md-6">
       <ul class="menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Products</a></li>
-        <li><a href="">Payment</a></li>
-        <li><a href="">Shipping</a></li>
+        <li><a href="">Home</a>
+            <ul class="submenu">
+				<li><a href="">item1</a></li>
+				<li><a href="">item2</a></li>
+				<li><a href="">item3</a></li>
+				<li><a href="">item4</a></li>
+				<li><a href="">item5</a></li>
+				<li><a href="">item6</a></li>
+				<li><a href="">item7</a></li>
+			</ul>
+        </li>
+
+
+        <li><a href="">Products</a>
+             <ul class="submenu">
+				<li><a href="">item1</a></li>
+				<li><a href="">item2</a></li>
+				<li><a href="">item3</a></li>
+				<li><a href="">item4</a></li>
+				<li><a href="">item5</a></li>
+				<li><a href="">item6</a></li>
+				<li><a href="">item7</a></li>
+			</ul>
+        </li>
+
+        <li><a href="">Payment</a>
+            <ul class="submenu">
+				<li><a href="">item1</a></li>
+				<li><a href="">item2</a></li>
+				<li><a href="">item3</a></li>
+				<li><a href="">item4</a></li>
+				<li><a href="">item5</a></li>
+				<li><a href="">item6</a></li>
+				<li><a href="">item7</a></li>
+			</ul>
+        </li>
+        <li><a href="">Shipping</a>
+            <ul class="submenu">
+				<li><a href="">item1</a></li>
+				<li><a href="">item2</a></li>
+				<li><a href="">item3</a></li>
+				<li><a href="">item4</a></li>
+				<li><a href="">item5</a></li>
+				<li><a href="">item6</a></li>
+				<li><a href="">item7</a></li>
+			</ul>
+        </li>
       </ul>
 
     </div>
 
 
 
-    <div class="col-md-3"> search
-      <!-- <div class="search">
-       <div class="form">
+    <div class="col-md-3"> 
+      
+      <div class="row">
+    <div class="col-md-9">
+    	<div class="form">
         <input type="text" placeholder="search" name="search">
-        <div class="glass"> <input type="image" src="img/glass.png"></div>
        </div>
-       <div class="basket"><img src="img/basket.png" alt=""></div>
-       </div> -->
+
+    </div>
+    <div class="col-md-3">
+    	<div class="basket basket_img"></div>
+    </div>
+    </div>
+       
     </div>
  
 </div>
@@ -52,7 +101,11 @@
 </header>
 
 
-
+<!-- <div class="form">
+        <input type="text" placeholder="search" name="search">
+        <div class="glass"> <input type="image" src="img/glass.png"></div>
+       </div>
+       <div class="basket"><img src="img/basket.png" alt=""></div> -->
 
 
 
