--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>ht 9</title>
 
  <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="style_ht.css">
+ <link rel="stylesheet" href="bootstrap.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -82,14 +83,24 @@
       <div class="row">
     <div class="col-md-9">
     	<div class="form">
+        <form>
         <input type="text" placeholder="search" name="search">
+        <div class="glass glass_img">
+           <a href=""></a>
+            </div>
+        </form>
        </div>
 
-    </div>
+       
+</div>
     <div class="col-md-3">
-    	<div class="basket basket_img"></div>
+      <div class="basket basket_img">
+        <div class="round">4</div>
+      </div>
     </div>
     </div>
+
+   
        
     </div>
  
@@ -101,16 +112,10 @@
 </header>
 
 
-<!-- <div class="form">
-        <input type="text" placeholder="search" name="search">
-        <div class="glass"> <input type="image" src="img/glass.png"></div>
-       </div>
-       <div class="basket"><img src="img/basket.png" alt=""></div> -->
-
 
 
 <main class="main">main</main>
-<footer class="footer">style</footer>
+<footer class="footer">footer</footer>
 
 </body>
 </html>
